# Plainpad

./: .gitignore  .gitmodules  .version-tracking-template.md  .version-tracking.md  AGENT.md  CHANGELOG.md  CLA.md  COMMERCIAL-EULA.md  COMMERCIAL_LICENSE.md  Cargo.toml  Dockerfile  Makefile  Orginal_AGENTS.md  README.md  TRADEMARK_POLICY.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci-release.yml
docs/: AI_INSTRUCTIONS.md
docs/Agents/: ChatGPT_AGENTS.md  Claude_AGENTS.md
scripts/: install.bat  install.ps1  install.sh
src/: app.rs  document.rs  editor.rs  main.rs  shortcuts.rs  updater.rs
src/ui/: editor_view.rs  menu.rs  mod.rs  tabs.rs
