[package]
name = "binary_name"          # MUST match APP_NAME
version = "1.0.0"              # SemVer
authors = ["Gilles Biagomba <gilles.infosec@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
description = "Brief description"
repository = "https://github.com/gbiagomba/project_name"
keywords = ["cli", "tool", "category"]
categories = ["command-line-utilities"]

[[bin]]
name = "binary_name"           # MUST match package name
path = "src/main.rs"
