[package]
name = "plainpad"
version = "0.2.6"
authors = ["Gilles Biagomba <gilles.infosec@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
description = "A fast, boring, native Rust notepad replacement."
repository = "https://github.com/gbiagomba/Plainpad"
keywords = ["notepad", "text-editor", "gui", "desktop"]
categories = ["gui"]

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
ropey = "1.6"
rfd = "0.14"

[[bin]]
name = "plainpad"
path = "src/main.rs"
